--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+mi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
                 </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="coffee-hero-section.png" alt="hero" 
+                    <img src="img/coffee-hero-section.png" alt="hero" 
                     class="hero-image">
                 </div>
             </div>
