--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ mi<!DOCTYPE html>
                 </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="img/coffee-hero-section.png" alt="hero" 
+                    <img src="/img/coffee-hero-section.png" alt="hero" 
                     class="hero-image">
                 </div>
             </div>
