--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="/img/coffee-hero-section.png" alt="hero" 
+                    <img src="img/coffee-hero-section.png" alt="hero" 
                     class="hero-image">
                 </div>
             </div>
@@ -94,27 +94,27 @@
             <div class="section-content">
                 <ul class="gallery-list">
                     <li class="gallery-item">
-                        <img src="/img/gallery-1.jpg" alt="Gallery" 
+                        <img src="img/gallery-1.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="/img/gallery-2.jpg" alt="Gallery" 
+                        <img src="img/gallery-2.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="/img/gallery-3.jpg" alt="Gallery" 
+                        <img src="img/gallery-3.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="/img/gallery-4.jpg" alt="Gallery" 
+                        <img src="img/gallery-4.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="/img/gallery-5.jpg" alt="Gallery" 
+                        <img src="img/gallery-5.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="/img/gallery-6.jpg" alt="Gallery" 
+                        <img src="img/gallery-6.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                 </ul>
