--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="coffee-hero-section.png" alt="hero" 
+                    <img src="img/coffee-hero-section.png" alt="hero" 
                     class="hero-image">
                 </div>
             </div>
@@ -91,7 +91,7 @@
             <div class="section-content">
                 <ul class="menu-list">
                     <li class="menu-item">
-                        <img src="hot-beverages.png" alt="Hot Beverages"
+                        <img src="img/hot-beverages.png" alt="Hot Beverages"
                          class="menu-image">
                          <h3 class="name">Hot Beverages</h3>
                          <p class="text">Wide range of Steaming hot coffee to make you 
@@ -99,14 +99,14 @@
                          </p>
                     </li>
                     <li class="menu-item">
-                        <img src="cold-beverages.png" alt="Cold Beverages"
+                        <img src="img/cold-beverages.png" alt="Cold Beverages"
                          class="menu-image">
                          <h3 class="name">Cold Beverages</h3>
                          <p class="text">Creamy and frothy cold coffee to make you cool.
                          </p>
                     </li>
                     <li class="menu-item">
-                        <img src="refreshment.png" alt="Refreshment"
+                        <img src="img/refreshment.png" alt="Refreshment"
                          class="menu-image">
                          <h3 class="name">Refreshment</h3>
                          <p class="text">Fruit and icy refreshing drink to make feel 
@@ -114,21 +114,21 @@
                          </p>
                     </li>
                    <li class="menu-item">
-                        <img src="special-combo.png" alt="Special combo"
+                        <img src="img/special-combo.png" alt="Special combo"
                          class="menu-image">
                          <h3 class="name">Special combo</h3>
                          <p class="text">Your favourite eating and drinking combations.
                          </p>
                     </li>
                     <li class="menu-item">
-                        <img src="desserts.png" alt="Desserts"
+                        <img src="img/desserts.png" alt="Desserts"
                          class="menu-image">
                          <h3 class="name">Desserts</h3>
                          <p class="text">Satiate your palate and take you on a culinary treat.
                          </p>
                     </li>
                     <li class="menu-item">
-                        <img src="burger-frenchfries.png" alt="burger & frenchfries"
+                        <img src="img/burger-frenchfries.png" alt="burger & frenchfries"
                          class="menu-image">
                          <h3 class="name">burger & french Fries</h3>
                          <p class="text">Quick bites to satisfy your small size hunger.
@@ -143,27 +143,27 @@
             <div class="section-content">
                 <ul class="gallery-list">
                     <li class="gallery-item">
-                        <img src="gallery-1.jpg" alt="Gallery" 
+                        <img src="img/gallery-1.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="gallery-2.jpg" alt="Gallery" 
+                        <img src="img/gallery-2.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="gallery-3.jpg" alt="Gallery" 
+                        <img src="img/gallery-3.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="gallery-4.jpg" alt="Gallery" 
+                        <img src="img/gallery-4.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="gallery-5.jpg" alt="Gallery" 
+                        <img src="img/gallery-5.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                      <li class="gallery-item">
-                        <img src="gallery-6.jpg" alt="Gallery" 
+                        <img src="img/gallery-6.jpg" alt="Gallery" 
                         class="gallery-image">
                     </li>
                 </ul>
